--- a/index.html
+++ b/index.html
@@ -3,41 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Etiqueten · Importación y etiquetas Apli 01273</title>
+    <title>Etiqueten · Importación de alumnos</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="app">
       <header class="hero">
         <div>
-          <p class="eyebrow">APP local · Importación secuencial</p>
+          <p class="eyebrow">APP local · Etiquetas por CSV</p>
           <h1>Etiqueten</h1>
           <p class="lead">
-            Importa dos CSV, filtra por NIF y genera un documento compatible con Word para imprimir etiquetas Apli 01273.
+            Carga el CSV de alumnos, revisa los datos y genera etiquetas filtradas por NIF con un segundo CSV.
           </p>
         </div>
-        <div class="version">Versión <span id="appVersion">0.1.1</span></div>
+        <div class="version">Versión <span id="appVersion">0.2.0</span></div>
       </header>
 
       <section class="card" aria-labelledby="step-1">
         <div class="card-header">
           <span class="step">1</span>
           <div>
-            <h2 id="step-1">Descarga del CSV1 (NIF válidos)</h2>
+            <h2 id="step-1">Carga del CSV de alumnos</h2>
             <p>
-              Instrucciones: Accede a la URL, filtra los usuarios, exporta el CSV y dámelo.
+              El CSV debe contener las columnas: Promoción CAG, Promoción CAZ, Promoción CGD, Alumno, Estado expediente,
+              NIF, Entidad, CIF Entidad, Provincia, DIRECCIÓN COMPLETA, ENVÍO REVISTA, CAG, CAZ, CGD.
             </p>
           </div>
         </div>
         <div class="card-body">
-          <a class="link" href="https://gestiona-02.espublico.com/analiza-int/pool-02/sense/app/c1e2e9c8-75aa-4900-8ca2-9ec24a23ef44/sheet/80a0b647-06c9-46b4-8263-c0eeefb29dc9/state/analysis" target="_blank" rel="noreferrer">
-            Abrir URL de origen (CSV1)
-          </a>
           <label class="file">
-            <span>Selecciona el CSV1</span>
-            <input type="file" id="csv1" accept=".csv" />
+            <span>Selecciona el CSV de alumnos</span>
+            <input type="file" id="csvPrimary" accept=".csv" />
           </label>
-          <p class="hint" id="csv1Status">Sin archivo cargado.</p>
+          <p class="hint" id="csvPrimaryStatus">Sin archivo cargado.</p>
+          <div class="data-block" id="primaryData" hidden>
+            <div class="data-header">
+              <h3>Datos importados</h3>
+              <span class="pill" id="primaryCount">0 filas</span>
+            </div>
+            <div class="table-wrap">
+              <table id="primaryTable"></table>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -45,96 +52,70 @@
         <div class="card-header">
           <span class="step">2</span>
           <div>
-            <h2 id="step-2">Descarga del CSV2 (NIF existentes)</h2>
+            <h2 id="step-2">Generar etiquetas</h2>
             <p>
-              Instrucciones: Accede a la URL, descarga el CSV y dámelo.
+              Abre el modal, carga el segundo CSV con NIF y confirma las coincidencias antes de generar el Word.
             </p>
           </div>
         </div>
         <div class="card-body">
-          <a class="link" href="https://gestiona-02.espublico.com/analiza-int/pool-02/sense/app/daacee2e-4442-4d96-b579-7bea9f6d65a2/sheet/LHCxAx/state/analysis" target="_blank" rel="noreferrer">
-            Abrir URL de origen (CSV2)
-          </a>
-          <label class="file">
-            <span>Selecciona el CSV2</span>
-            <input type="file" id="csv2" accept=".csv" />
-          </label>
-          <p class="hint" id="csv2Status">Sin archivo cargado.</p>
-        </div>
-      </section>
-
-      <section class="card" aria-labelledby="step-3">
-        <div class="card-header">
-          <span class="step">3</span>
-          <div>
-            <h2 id="step-3">Filtrado por NIF</h2>
-            <p>
-              Revisa los datos detectados y genera la lista de coincidencias entre ambos CSV.
-            </p>
-          </div>
-        </div>
-        <div class="card-body">
-          <div class="grid">
-            <div class="panel">
-              <h3>Resumen CSV1</h3>
-              <ul class="summary" id="csv1Summary">
-                <li>Filas: —</li>
-                <li>Columna NIF: —</li>
-              </ul>
-            </div>
-            <div class="panel">
-              <h3>Resumen CSV2</h3>
-              <ul class="summary" id="csv2Summary">
-                <li>Filas: —</li>
-                <li>Columna NIF: —</li>
-              </ul>
-            </div>
-            <div class="panel">
-              <h3>Resultado</h3>
-              <ul class="summary" id="resultSummary">
-                <li>Coincidencias: —</li>
-                <li>Columnas disponibles: —</li>
-              </ul>
-            </div>
-          </div>
-          <button class="primary" id="filterBtn" disabled>Filtrar y preparar etiquetas</button>
-        </div>
-      </section>
-
-      <section class="card" aria-labelledby="step-4">
-        <div class="card-header">
-          <span class="step">4</span>
-          <div>
-            <h2 id="step-4">Documento Word para imprimir</h2>
-            <p>
-              Descarga un documento .doc con maquetado compatible para imprimir etiquetas Apli 01273.
-            </p>
-          </div>
-        </div>
-        <div class="card-body">
-          <div class="actions">
-            <button class="secondary" id="downloadDoc" disabled>Descargar documento Word</button>
-            <button class="ghost" id="previewBtn" disabled>Previsualizar etiquetas</button>
-          </div>
-          <div class="hint">
-            La maquetación usa A4 y etiquetas de 70 × 37 mm (Apli 01273). Ajusta la escala de impresión si fuese necesario.
-          </div>
-        </div>
-      </section>
-
-      <section class="card" aria-labelledby="preview" id="previewSection" hidden>
-        <div class="card-header">
-          <span class="step">Vista previa</span>
-          <div>
-            <h2 id="preview">Etiquetas generadas</h2>
-            <p>Comprueba cómo quedarán las etiquetas antes de imprimir.</p>
-          </div>
-        </div>
-        <div class="card-body">
-          <div id="labelsPreview" class="labels-preview"></div>
+          <button class="primary" id="openModal" disabled>Generar etiquetas</button>
         </div>
       </section>
     </main>
+
+    <div class="modal" id="labelsModal" hidden aria-hidden="true">
+      <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+        <header class="modal-header">
+          <div>
+            <p class="eyebrow">Paso final</p>
+            <h2 id="modal-title">Cruce de NIF y generación de Word</h2>
+          </div>
+          <button class="icon" id="closeModal" aria-label="Cerrar">×</button>
+        </header>
+        <div class="modal-body">
+          <div class="modal-grid">
+            <div>
+              <label class="file">
+                <span>Sube el CSV de control (Alumno, Estado expediente, NIF)</span>
+                <input type="file" id="csvSecondary" accept=".csv" />
+              </label>
+              <p class="hint" id="csvSecondaryStatus">Sin archivo cargado.</p>
+              <div class="summary-grid" id="matchSummary" hidden>
+                <div class="summary-card">
+                  <h4>Coincidencias</h4>
+                  <p id="matchCount">0</p>
+                </div>
+                <div class="summary-card">
+                  <h4>No coinciden</h4>
+                  <p id="mismatchCount">0</p>
+                </div>
+              </div>
+            </div>
+            <div class="modal-actions">
+              <button class="secondary" id="generateWord" disabled>Generar Word</button>
+              <button class="ghost" id="downloadPreview" disabled>Previsualizar etiquetas</button>
+            </div>
+          </div>
+
+          <div class="results" id="matchResults" hidden>
+            <h3>Alumnos coincidentes (NIF en verde)</h3>
+            <div class="table-wrap">
+              <table id="matchesTable"></table>
+            </div>
+            <h3 class="muted">Alumnos sin coincidencia</h3>
+            <div class="table-wrap">
+              <table id="mismatchesTable"></table>
+            </div>
+          </div>
+
+          <section class="preview" id="previewSection" hidden>
+            <h3>Vista previa de etiquetas</h3>
+            <div id="labelsPreview" class="labels-preview"></div>
+          </section>
+        </div>
+      </div>
+    </div>
 
     <footer class="footer">Hecho para ejecución local · HTML + JS</footer>
 
