Add PDF export and align label layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Carga el CSV de alumnos, revisa los datos y genera etiquetas filtradas por NIF con un segundo CSV.
           </p>
         </div>
-        <div class="version">Versión <span id="appVersion">0.4.2</span></div>
+        <div class="version">Versión <span id="appVersion">0.4.3</span></div>
       </header>
 
       <section class="card" aria-labelledby="step-1">
@@ -96,6 +96,7 @@
             <div class="modal-actions">
               <button class="secondary" id="generateWord" disabled>Descargar Word (tabla)</button>
               <button class="secondary outline" id="generateMerge" disabled>Descargar APLI 01273 (combinar)</button>
+              <button class="secondary outline" id="generatePdf" disabled>Exportar PDF</button>
               <button class="ghost" id="downloadPreview" disabled>Previsualizar etiquetas</button>
             </div>
           </div>
