--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Carga el CSV de alumnos, revisa los datos y genera etiquetas filtradas por NIF con un segundo CSV.
           </p>
         </div>
-        <div class="version">Versión <span id="appVersion">0.4.3</span></div>
+        <div class="version">Versión <span id="appVersion">0.4.5</span></div>
       </header>
 
       <section class="card" aria-labelledby="step-1">
@@ -94,7 +94,7 @@
               </div>
             </div>
             <div class="modal-actions">
-              <button class="secondary" id="generateWord" disabled>Descargar Word (tabla)</button>
+              <button class="secondary" id="generateWord" disabled>Descargar Word (DOCX)</button>
               <button class="secondary outline" id="generateMerge" disabled>Descargar APLI 01273 (combinar)</button>
               <button class="secondary outline" id="generatePdf" disabled>Exportar PDF</button>
               <button class="ghost" id="downloadPreview" disabled>Previsualizar etiquetas</button>
@@ -123,6 +123,7 @@
     <footer class="footer">Hecho para ejecución local · HTML + JS</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
